# compare_jenkins

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  jen_build_history.py  jen_compare.py  pyproject.toml  requirements.txt  setup.py
src/gentle_jenkins_tools/: jen_compare.py  jen_job_history.py
